--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="styles.css">
-<title>Registro de Hábitos Saudáveis</title>
+<link rel="icon" href="assets/favicon.ico" type="image/x-icon">
+<link rel="apple-touch-icon" href="assets/favicon.png">
+<title>Hábitos</title>
 </head>
 <body>
   <div class="conteudo">
