--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="styles.css">
-<link rel="icon" href="assets/favicon.ico" type="image/x-icon">
-<link rel="apple-touch-icon" href="assets/favicon.png">
+<link rel="icon" href="assets/favico.png" type="image/x-icon">
+<link rel="apple-touch-icon" href="assets/favico.png">
 <title>Hábitos</title>
 </head>
 <body>
